--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,6 +2,13 @@
   max-width: 1100px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+  /* grid-template-columns: repeat(auto-fit, minmax(18em, 1fr)); */
+  grid-template-columns: 1fr 1fr;
   grid-gap: 2em;
+}
+
+@media screen and (max-width: 450px) {
+  .projects__grid {
+  grid-template-columns: 1fr;
+  }
 }
