--- a/src/components/ProjectContainer/ProjectContainer.css
+++ b/src/components/ProjectContainer/ProjectContainer.css
@@ -12,7 +12,7 @@
 }
 
 .project__description {
-  margin-top: 1em;
+  margin: 1em 0;
 }
 
 .project__stack {
@@ -36,6 +36,5 @@
 
 .img {
   width: 100%;
- 
   height: max-content;
 }
